src/objects/HWS_AlternateProductCode__c.object
<CustomObject>
    <fields>
        <fullName>HWS_AlternateCodeType__c</fullName>
        <description>User Story - 1083, to store the alternate code type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Code Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Cares_Code__c</fullName>
        <description>Field created to fetch Name (Cares Code)  where AlternateCodeType  is CARESID</description>
        <formula>IF( HWS_AlternateCodeType__c  = &apos;CARESID&apos;,   HYPERLINK(&quot;/&quot; &amp; Id , Name ) , &apos;&apos;)</formula>
        <label>Cares Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Combined_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Combined Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Comments__c</fullName>
        <description>Created as part of Nokiasc-34068</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HWS_EDP_ActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP_ActiveStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_EDP_DeletedAtSource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDP_DeletedAtSource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_EDP_LastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDP_LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HWS_ID__c</fullName>
        <description>Created as part of Nokiasc-34068</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_KitDescription__c</fullName>
        <description>Created as part of Nokiasc-34068</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Kit Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Kit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of Nokiasc-34068</description>
        <label>Kit Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Alternate Product Codes</relationshipLabel>
        <relationshipName>Alternate_Product_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_NSNCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Part Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_PartDescription__c</fullName>
        <description>Creating as part of Nokiasc-34068</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Part Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_PartType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PartType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>created as part of Nokiasc-34068</description>
        <label>Part Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Alternate Product Codes (Part)</relationshipLabel>
        <relationshipName>Alternate_Product_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HWS_Quantity__c</fullName>
        <description>creating as part of Nokiasc-34068</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HWS_SourceSystem__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SourceSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Unprocessed_Reason__c</fullName>
        <description>Field created to notify whether the unprocessed reason if Sales Item has been loaded to SRM.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unprocessed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_VersionItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User Story - 1083, to store the version Item.</description>
        <label>Version Item</label>
        <referenceTo>HWS_VersionItem__c</referenceTo>
        <relationshipLabel>Alternate Product Codes</relationshipLabel>
        <relationshipName>Alternate_Product_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alternate Product Code</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Code/Kit Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternate Product Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>